k8s/namespaces/mysql/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: mysql
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: mysql
