k8s/namespaces/mysql/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: mysql

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: mysql
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
